Upgrade to bootstrap 2.3.2 and refactor some UI

--- a/app/assets/stylesheets/_alerts.sass
+++ b/app/assets/stylesheets/_alerts.sass
@@ -7,7 +7,7 @@
   &.block
     padding: $grid - 1 2 * $ygrid - 1
     margin: 0 -2 * $grid $ygrid -2 * $grid
-    @include rounded
+    @include border-radius(3px)
   p
     margin-bottom: 0
 	
