--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,10 +1,9 @@
 .row
-  .span6
+  .span6.offset3
     %h2 What's your name?
 
-    %p I'm super excited that you want to join, but I don't know your name yet.
+    %p We're super-duper excited that you want to join, but your identity is a complete mystery.
     
     %p Just enter in your name and the email address and password you'd like to use to log in with and you'll be ready to go.
     
-  .span6
     = render 'form'
