--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,4 +1,4 @@
-// Reset
+/* Reset */
 *
   margin: 0
   padding: 0
@@ -13,33 +13,24 @@ $error_color: #E64963
 /* Mixins */
 @mixin clearfix
   overflow: hidden
-
-@mixin rounded($side: all, $radius: 3px)
-  @if ($side == all)
-    border-radius: $radius
-    -moz-border-radius: $radius
-    -webkit-border-radius: $radius
-  @else if ($side == bottom)
-    @each $subside in bottom-left, bottom-right
-      @include rounded($subside, $radius)
-  @else if ($side == top)
-    @each $subside in top-left, top-right
-      @include rounded($subside, $radius)
-  @else
-    border-#{$side}-radius: $radius
-    -moz-border-radius-#{$side}: $radius
-    -webkit-border-#{$side}-radius: $radius
     
-@mixin gradient($color1, $color2)
-  background: mix($color1, $color2) //fallback for older browsers
-  background-image: -webkit-gradient(linear, left top, left bottom, from($color1), to($color2)) // Chrome & Safari
-  background-image: -moz-linear-gradient(top, $color1, $color2) // Firefox
-  background-image: linear-gradient(top, $color1 0%, $color2 100%) // W3C
-
 /* Chrome uses Windows' horrid font smoothing by default. Adding a transparent text-shadow makes it fall back to Webkit's default (and superior) font renderer */  
 @mixin force_smoothing
   text-shadow: rgba(0, 0, 0, .01) 0 0 1px
 
+
+/* Custom application variables */
+@import foosball-tracker/variables
+  
+/* Styling from bootstrap */
+@import bootstrap/variables
+@import bootstrap/mixins
+
+@import bootstrap/grid
+@import bootstrap/media
+@import bootstrap/scaffolding
+@import bootstrap/utilities
+  
 /* Sass partial includes */
 
 @import layout
